--- a/src/UI/UIComponents/PAGES/uniqueImagePage/uniqueImage.module.scss
+++ b/src/UI/UIComponents/PAGES/uniqueImagePage/uniqueImage.module.scss
@@ -8,14 +8,9 @@
         justify-content: center;
         align-items: center;
         flex: 0 0 100%;
-
-        min-height: 500px;
-        max-height: 700px;
       }
 
       .uniqueTopSectionWrapper {
-        min-height: 500px;
-        max-height: 700px;
       }
     }
   }
@@ -38,14 +33,9 @@
         justify-content: center;
         align-items: center;
         flex: 0 0 100%;
-
-        min-height: 300px;
-        max-height: 400px;
       }
 
       .uniqueTopSectionWrapper {
-        min-height: 300px;
-        max-height: 400px;
       }
     }
   }
